# polkit-qt-1

./: CMakeLists.txt  polkit-qt-1.pc.cmake  polkit-qt-agent-1.pc.cmake  polkit-qt-core-1.pc.cmake  polkit-qt-gui-1.pc.cmake
agent/: CMakeLists.txt  polkitqt1-agent-listener.cpp  polkitqt1-agent-session.cpp
core/: CMakeLists.txt  polkitqt1-authority.cpp  polkitqt1-authority.h
gui/: CMakeLists.txt  polkitqt1-gui-action.h  polkitqt1-gui-actionbutton_p.h
rpm/: polkit-qt-1.spec
